// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/swc > should add antd pluginImport 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "rspackExperiments": {
                "import": [
                  {
                    "libraryDirectory": "es",
                    "libraryName": "antd",
                    "style": true,
                  },
                ],
              },
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should add browserslist 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "chrome 98",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should add browserslist 2`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "chrome 98",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should add pluginImport 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "rspackExperiments": {
                "import": [
                  {
                    "libraryName": "foo",
                  },
                ],
              },
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should disable all pluginImport 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should disable preset_env in target other than web 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "mode": undefined,
                "targets": [
                  "node >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/swc > should disable preset_env mode 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "mode": undefined,
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/swc > should enable entry mode preset_env 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should enable usage mode preset_env 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "usage",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should has correct core-js 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should has correct core-js 2`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should has correct core-js 3`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "mode": undefined,
                "targets": [
                  "node >= 14",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/swc > should'n override browserslist when target platform is not web 1`] = `
{
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "experiments": {
    "rspackFuture": {
      "disableTransformByDefault": true,
    },
  },
  "module": {
    "rules": [
      {
        "exclude": [
          "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
        ],
        "test": /\\\\\\.\\(js\\|mjs\\|cjs\\|jsx\\)\\$\\|\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "type": "javascript/auto",
        "use": [
          {
            "loader": "builtin:swc-loader",
            "options": {
              "cwd": "<ROOT>",
              "env": {
                "coreJs": "3.32",
                "mode": "entry",
                "targets": [
                  "> 0.01%",
                  "not dead",
                  "not op_mini all",
                ],
              },
              "exclude": [],
              "inlineSourcesContent": true,
              "isModule": "unknown",
              "jsc": {
                "externalHelpers": true,
                "parser": {
                  "decorators": true,
                  "syntax": "typescript",
                  "tsx": true,
                },
                "preserveAllComments": true,
                "transform": {
                  "decoratorMetadata": true,
                  "legacyDecorator": true,
                },
              },
              "minify": false,
              "sourceMaps": true,
            },
          },
        ],
      },
    ],
  },
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;
